--- a/.gitconfig
+++ b/.gitconfig
@@ -30,8 +30,6 @@
 	whitespace = warn
 [help]
 	autocorrect = 10
-[include]
-	path = ~/.gitconfig.local
 [interactive]
 	singlekey = true
 [merge]
@@ -58,3 +56,6 @@
 	autosquash = true
 [diff]
 	algorithm = patience
+[user]
+	email = adam@adamlowe.com
+	name = Adam Lowe
